Fixed some spelling errors and a general update.
Few spelling errors were fixed and all the files were updated to the current state - not much really.

--- a/cfg/Shadoweee/avidiots.cfg
+++ b/cfg/Shadoweee/avidiots.cfg
@@ -417,7 +417,7 @@ panorama_debugger_saved_height "1080"
 panorama_debugger_saved_width "1920"
 panorama_debugger_saved_xpos "0"
 panorama_debugger_saved_ypos "0"
-password "Shadoweee"
+password "FILL_UP"
 play_distance "1"
 player_botdifflast_s "2"
 
