--- a/cfg/Shadoweee/cienki.cfg
+++ b/cfg/Shadoweee/cienki.cfg
@@ -206,7 +206,7 @@ net_allow_multicast "1"
 npc_height_adjust "1"
 option_duck_method "0"
 option_speed_method "0"
-password ""
+password "FILL_UP"
 play_distance "1"
 player_botdifflast_s "1"
 player_competitive_maplist_2v2_8_0_E8907D2E "mg_de_train,mg_de_lake,mg_de_inferno,mg_de_shortnuke,mg_de_vertigo,mg_gd_rialto,mg_de_shortdust,mg_de_overpass,mg_de_cbble"
