--- a/cfg/Shadoweee/shadooo.cfg
+++ b/cfg/Shadoweee/shadooo.cfg
@@ -299,7 +299,7 @@ net_steamcnx_allowrelay "1"
 npc_height_adjust "1"
 option_duck_method "0"
 option_speed_method "0"
-password "Shadoweee"
+password "FILL_UP"
 play_distance "1"
 player_botdifflast_s "2"
 player_nevershow_communityservermessage "0"
@@ -324,7 +324,7 @@ scene_showfaceto "0"
 scene_showlook "0"
 scene_showmoveto "0"
 scene_showunlock "0"
-sensitivity "1.97"
+sensitivity "1.4"
 sk_autoaim_mode "1"
 skill "1"
 snd_deathcamera_volume "0.000000"
@@ -430,6 +430,9 @@ xbox_throttlespoof "200"
 zoom_sensitivity_ratio_joystick "1.0"
 zoom_sensitivity_ratio_mouse "0.818933027098955175"
 
+
+
+
 alias "-csmoke" "cl_crosshairsize 3;cl_crosshairdot 0;cl_crosshairgap -2; dot"
 alias "+csmoke" "cl_crosshairsize 1337;cl_crosshairdot 0;cl_crosshairgap -5"
 bind "m" "+csmoke"
@@ -438,10 +441,23 @@ alias "-hjump" "-jump; -duck"
 bind "space" "+hjump"
 alias "+switch" "lastinv"
 alias "-switch" "lastinv"
-alias "1" "bind Mouse4 +voicerecord"
-alias "11" "unbind Mouse4"
-alias "2" "mat_monitorgamma 1.6"
-alias "3" "mat_monitorgamma 2.3"
+
+alias "micro_4_on" "bind Mouse4 +voicerecord; alias "1" "micro_4_off"; echo "Mouse4 = gadanie""
+alias "micro_4_off" "unbind Mouse4; alias "1" "micro_4_on"; echo "Mouse4 != gadanie""
+alias "1" "micro_4_on"
+
+alias "micro_5_on" "bind Mouse5 +voicerecord; alias "11" "micro_5_off"; echo "Mouse5 = gadanie""
+alias "micro_5_off" "unbind Mouse5; alias "11" "micro_5_on"; echo "Mouse5 != gadanie""
+alias "11" "micro_5_on"
+
+alias "pl_ping_on" "bind Mouse5 player_ping; echo "Mouse5 = player_ping"; alias "3" "pl_ping_off""
+alias "pl_ping_off" "unbind Mouse5; echo "Mouse5 != player_ping"; alias "3" "pl_ping_on""
+alias "3" "pl_ping_on"
+
+alias "gamma16" "mat_monitorgamma 1.6; alias "2" "gamma23"; echo "Gamma set to 1.6""
+alias "gamma23" "mat_monitorgamma 2.3; alias "2" "gamma16"; echo "Gamma set to 2.3""
+alias "2" "gamma16"
+
 alias "4" "mat_setvideomode 1600 1200 0"
 alias "5" "mat_setvideomode 1336 768 0"
 alias "6" "mat_setvideomode 1280 960 0; net_graphheight 48; sensitivity 1.97"
@@ -454,7 +470,11 @@ alias "+jumpthrow" "+jump;-attack"
 alias "-jumpthrow" "-jump"
 bind alt "+jumpthrow"
 
-alias "dot" "cl_crosshair_outlinethickness 0; cl_crosshairdot 1; cl_crosshairthickness 1.5; cl_crosshairgap 5000; cl_crosshaircolor_g 255; cl_crosshaircolor_r 0; cl_crosshaircolor_b 0"
+alias "dot" "dot_on"
+alias "dot_on" "cl_crosshair_outlinethickness 0; cl_crosshairdot 1; cl_crosshairthickness 1.5; cl_crosshairgap 5000; cl_crosshaircolor_g 255; cl_crosshaircolor_r 0; cl_crosshaircolor_b 0; alias "dot" "dot_off""
+alias "dot_off" "cl_crosshair_outlinethickness 0; cl_crosshairdot 0; cl_crosshairthickness 1; cl_crosshairgap -3; cl_crosshaircolor_g 0; cl_crosshaircolor_r -1000; cl_crosshaircolor_b -1000; alias "dot" "dot_on""
+
+alias "dev" "mat_setvideomode 1200 1200 1; echo "Tryb dev uruchomiony""
 
 //klasyczny modul ladowania
 
@@ -472,10 +492,10 @@ echo "|           Pomyslnie zaladowano exec Shadooo.         |"
 echo "└──────────────────────────────────────────────────────┘"
 echo " "
 echo "┌──────────────────────────────────────────────────────┐"
-echo "| Wpisz 1,    aby zbinodwac Mouse4 pod +voicerecord    |"
-echo "| Wpisz 11,   aby odbinodwac Mouse4 z +voicerecord     |"
-echo "| Wpisz 2,    aby zmienic gamma na 1.6                 |"
-echo "| Wpisz 3,    aby zmienic gamma na 2.3                 |"
+echo "| Wpisz 1,    bind/unbind Mouse4 pod +voicerecord      |"
+echo "| Wpisz 11,   bind/unbind Mouse5 pod +voicerecord      |"
+echo "| Wpisz 2,    1.6/2.3 mat_monitorgamma                 |"
+echo "| Wpisz 3,    bind/unbind Mouse5 pod player_ping       |"
 echo "| Wpisz 4,    aby ustawic rozdzialke na 1600 x 1200    |"
 echo "| Wpisz 5,    aby ustawic rozdzialke na 1336 x 768     |"
 echo "| Wpisz 6,    aby ustawic rozdzialke na 1280 x 960     |"
@@ -486,5 +506,5 @@ echo "| Wpisz back, aby powrócic do wyboru configu           |"
 echo "└──────────────────────────────────────────────────────┘"
 echo " "
 echo "┌──────────────────────────────────────────────────────┐"
-echo "| Exec made by Shadoweee | Version 1.5 @ 05.06.2020    |"
+echo "| Exec made by Shadoweee | Version 1.7 @ 15.06.2023    |"
 echo "└──────────────────────────────────────────────────────┘"
