--- a/cfg/Shadoweee/shadstary.cfg
+++ b/cfg/Shadoweee/shadstary.cfg
@@ -108,7 +108,7 @@ net_steamcnx_allowrelay "1"
 cl_updaterate "64.000000"
 
 //Misc
-password "Shadoweee"
+password "FILL_UP"
 rate "786432"
 mm_csgo_community_search_players_min "3"
 mm_dedicated_search_maxping "43"
