--- a/cfg/Shadoweee/wojmaj.cfg
+++ b/cfg/Shadoweee/wojmaj.cfg
@@ -222,7 +222,7 @@ net_steamcnx_allowrelay "1"
 npc_height_adjust "1"
 option_duck_method "1"
 option_speed_method "1"
-password "wojmajKing"
+password "FILL_UP"
 play_distance "1"
 player_botdifflast_s "0.000000"
 player_competitive_maplist_2v2_8_0_E8907D2E "mg_de_inferno,mg_de_overpass,mg_de_cbble"
