--- a/cfg/Shadoweee/shadpanorama.cfg
+++ b/cfg/Shadoweee/shadpanorama.cfg
@@ -315,7 +315,7 @@ net_steamcnx_allowrelay "1"
 npc_height_adjust "1"
 option_duck_method "0"
 option_speed_method "0"
-password "Shadoweee"
+password "FILL_UP"
 play_distance "1"
 player_botdifflast_s "2"
 
