--- a/cfg/config.cfg
+++ b/cfg/config.cfg
@@ -1,3 +1,4 @@
+cfgver "1"
 unbindall
 bind "0" "slot10; cl_righthand 1"
 bind "1" "slot1; cl_righthand 1"
@@ -67,6 +68,59 @@ bind "MWHEELDOWN" "+jump"
 adsp_debug "0"
 ai_report_task_timings_on_limit "0"
 ai_think_limit_label "0"
+aim_flickstick_circular_deadzone_max "0.94"
+aim_flickstick_circular_deadzone_min "0.6"
+aim_flickstick_crank_sensitivity "1.0"
+aim_flickstick_crank_tightness "0.8"
+aim_flickstick_enabled "0"
+aim_flickstick_flick_snap_mode "5"
+aim_flickstick_flick_tightness "0.6"
+aim_flickstick_forward_deadzone "7.0"
+aim_flickstick_release_dampen_speed "2.0f"
+aim_gyro_acceleration "1"
+aim_gyro_base_sensitivity "1.5"
+aim_gyro_circular_deadzone "0.0"
+aim_gyro_conversion_mode "0"
+aim_gyro_enable_mode "0"
+aim_gyro_high_sense_multiplier "2.0"
+aim_gyro_high_sense_speed "360.0"
+aim_gyro_invert_pitch "0"
+aim_gyro_invert_yaw "0"
+aim_gyro_low_sense_speed "7.5"
+aim_gyro_pitchyaw_ratio "0.5"
+aim_gyro_precision_speed "0.75"
+aim_gyro_raw "0"
+aim_gyro_ray_angle "-45"
+aim_gyro_siapi_convert_pixels_to_angles "25.50"
+aim_gyro_siapi_sensitivity_setting "600"
+aim_gyro_siapi_vertical_scale_setting "100"
+aim_gyro_square_deadzone_pitch "0.0"
+aim_gyro_square_deadzone_yaw "0.0"
+aim_gyro_zoom_dampening_level1 "0.8"
+aim_gyro_zoom_dampening_level2 "0.6"
+aim_stick_circular_deadzone_max "0.90"
+aim_stick_circular_deadzone_min "0.17"
+aim_stick_extra_turning_delay "0.0"
+aim_stick_extra_turning_ramp_up_time "0.6"
+aim_stick_extra_yaw "160.0"
+aim_stick_invert_pitch "0"
+aim_stick_invert_yaw "0"
+aim_stick_rate_pitch "160.0"
+aim_stick_rate_yaw "270.0"
+aim_stick_response_curve "3"
+aim_stick_square_deadzone_pitch "0.05"
+aim_stick_square_deadzone_yaw "0.0"
+aim_stick_zoom_dampening_level1 "0.8"
+aim_stick_zoom_dampening_level2 "0.6"
+aim_touchpad_circular_deadzone_min "0.0"
+aim_touchpad_invert_pitch "0"
+aim_touchpad_invert_yaw "0"
+aim_touchpad_sensitivity_pitch "3.5"
+aim_touchpad_sensitivity_yaw "4.0"
+aim_touchpad_square_deadzone_pitch "0.0"
+aim_touchpad_square_deadzone_yaw "0.0"
+aim_touchpad_zoom_dampening_level1 "0.8"
+aim_touchpad_zoom_dampening_level2 "0.6"
 budget_averages_window "30"
 budget_background_alpha "128"
 budget_bargraph_background_alpha "128"
@@ -97,8 +151,8 @@ c_thirdpersonshoulderaimdist "120.0"
 c_thirdpersonshoulderdist "40.0"
 c_thirdpersonshoulderheight "5.0"
 c_thirdpersonshoulderoffset "20.0"
-cachedvalue_count_partybrowser "1530967308"
-cachedvalue_count_teammates "1530967320"
+cachedvalue_count_partybrowser "1691187461"
+cachedvalue_count_teammates "1691187465"
 cam_collision "1"
 cam_idealdelta "4.0"
 cam_idealdist "150"
@@ -121,19 +175,20 @@ cl_bob_lower_amt "5"
 cl_bobamt_lat "0.33"
 cl_bobamt_vert "0.14"
 cl_bobcycle "0.98"
+cl_buywheel_donate_key "0"
 cl_buywheel_nomousecentering "1"
 cl_buywheel_nonumberpurchasing "0"
 cl_chatfilter_version "1"
 cl_chatfilters "63"
 cl_clanid "32936634"
-cl_cmdrate "128.000000"
+cl_cmdrate "64.000000"
 cl_color "1"
 cl_compass_enabled "1"
 cl_crosshair_drawoutline "0"
-cl_crosshair_dynamic_maxdist_splitratio "1.000000"
+cl_crosshair_dynamic_maxdist_splitratio "0"
 cl_crosshair_dynamic_splitalpha_innermod "1"
-cl_crosshair_dynamic_splitalpha_outermod "1.000000"
-cl_crosshair_dynamic_splitdist "3"
+cl_crosshair_dynamic_splitalpha_outermod "0.3"
+cl_crosshair_dynamic_splitdist "5"
 cl_crosshair_friendly_warning "1"
 cl_crosshair_outlinethickness "0"
 cl_crosshair_sniper_show_normal_inaccuracy "0"
@@ -141,21 +196,22 @@ cl_crosshair_sniper_width "1"
 cl_crosshair_t "0"
 cl_crosshairalpha "250"
 cl_crosshaircolor "1"
-cl_crosshaircolor_b "0"
-cl_crosshaircolor_g "255"
-cl_crosshaircolor_r "0"
-cl_crosshairdot "1"
-cl_crosshairgap "5000"
+cl_crosshaircolor_b "0.000000"
+cl_crosshaircolor_g "0"
+cl_crosshaircolor_r "0.000000"
+cl_crosshairdot "0"
+cl_crosshairgap "-3"
 cl_crosshairgap_useweaponvalue "0"
 cl_crosshairsize "2"
 cl_crosshairstyle "4"
-cl_crosshairthickness "1.5"
+cl_crosshairthickness "1"
 cl_crosshairusealpha "1"
 cl_debugrumble "0"
 cl_detail_avoid_force "0.4"
 cl_detail_avoid_radius "64"
 cl_detail_avoid_recover_speed "0.25"
 cl_detail_max_sway "5"
+cl_disable_round_end_report "0"
 cl_disablefreezecam "0"
 cl_disablehtmlmotd "0"
 cl_dm_buyrandomweapons "1"
@@ -163,9 +219,7 @@ cl_downloadfilter "all"
 cl_dz_playagain_auto_spectate "0"
 cl_embedded_stream_audio_volume "60"
 cl_embedded_stream_audio_volume_xmaster "0.6"
-cl_filtertext_enabled "0"
 cl_fixedcrosshairgap "0"
-cl_forcepreload "0"
 cl_freezecampanel_position_dynamic "1"
 cl_grass_mip_bias "-0.5"
 cl_hide_avatar_images ""
@@ -177,6 +231,8 @@ cl_hud_playercount_pos "0"
 cl_hud_playercount_showcount "0"
 cl_hud_radar_scale "1"
 cl_idealpitchscale "0.8"
+cl_inventory_radial_immediate_select "1"
+cl_inventory_radial_tap_to_cycle "1"
 cl_inventory_saved_filter2 "all"
 cl_inventory_saved_sort2 "inv_sort_rarity"
 cl_invites_only_friends "0"
@@ -188,10 +244,15 @@ cl_mouselook "1"
 cl_mute_all_but_friends_and_party "0"
 cl_mute_enemy_team "0"
 cl_obs_interp_enable "0"
+cl_observed_bot_crosshair "0"
 cl_observercrosshair "1"
+cl_parachute_autodeploy "1"
+cl_ping_fade_deadzone "60"
+cl_ping_fade_distance "300"
 cl_player_ping_mute "0"
 cl_playerspray_auto_apply "1"
-cl_promoted_settings_acknowledged "1:1592248101669"
+cl_promoted_settings_acknowledged "1:1677618819671"
+cl_quickinventory_filename "radial_quickinventory.txt"
 cl_quickinventory_lastinv "1"
 cl_quickinventory_line_update_speed "65.0f"
 cl_radar_always_centered "0"
@@ -199,9 +260,34 @@ cl_radar_icon_scale_min "1"
 cl_radar_rotate "1"
 cl_radar_scale "0.5"
 cl_radar_square_with_scoreboard "1"
-cl_radial_radio_tab "0"
-cl_radialmenu_deadzone_size "0.04"
-cl_righthand "0"
+cl_radial_radio_tab_0_text_1 "#Chatwheel_requestspend"
+cl_radial_radio_tab_0_text_2 "#Chatwheel_requestweapon"
+cl_radial_radio_tab_0_text_3 "#Chatwheel_bplan"
+cl_radial_radio_tab_0_text_4 "#Chatwheel_followingyou"
+cl_radial_radio_tab_0_text_5 "#Chatwheel_midplan"
+cl_radial_radio_tab_0_text_6 "#Chatwheel_followme"
+cl_radial_radio_tab_0_text_7 "#Chatwheel_aplan"
+cl_radial_radio_tab_0_text_8 "#Chatwheel_requestecoround"
+cl_radial_radio_tab_1_text_1 "#Chatwheel_enemyspotted"
+cl_radial_radio_tab_1_text_2 "#Chatwheel_needbackup"
+cl_radial_radio_tab_1_text_3 "#Chatwheel_bplan"
+cl_radial_radio_tab_1_text_4 "#Chatwheel_bombcarrierspotted"
+cl_radial_radio_tab_1_text_5 "#Chatwheel_multipleenemieshere"
+cl_radial_radio_tab_1_text_6 "#Chatwheel_sniperspotted"
+cl_radial_radio_tab_1_text_7 "#Chatwheel_aplan"
+cl_radial_radio_tab_1_text_8 "#Chatwheel_inposition"
+cl_radial_radio_tab_2_text_1 "#Chatwheel_affirmative"
+cl_radial_radio_tab_2_text_2 "#Chatwheel_negative"
+cl_radial_radio_tab_2_text_3 "#Chatwheel_compliment"
+cl_radial_radio_tab_2_text_4 "#Chatwheel_thanks"
+cl_radial_radio_tab_2_text_5 "#Chatwheel_cheer"
+cl_radial_radio_tab_2_text_6 "#Chatwheel_peptalk"
+cl_radial_radio_tab_2_text_7 "#Chatwheel_sorry"
+cl_radial_radio_tab_2_text_8 "#Chatwheel_sectorclear"
+cl_radial_radio_tap_to_ping "1"
+cl_radial_radio_version_reset "12"
+cl_radialmenu_deadzone_size_joystick "0.17"
+cl_righthand "1"
 cl_rumblescale "1.0"
 cl_sanitize_player_names "0"
 cl_scoreboard_mouse_enable_binding "+attack2"
@@ -230,6 +316,8 @@ commentary_firstrun "0"
 con_allownotify "1"
 con_enable "1"
 crosshair "1"
+demo_index "0"
+demo_index_max_other "500"
 dsp_enhance_stereo "0"
 engine_no_focus_sleep "50"
 force_audio_english "0"
@@ -307,6 +395,7 @@ m_rawinput "1"
 m_side "0.8"
 m_yaw "0.022"
 mapoverview_icon_scale "1.0"
+mat_enable_uber_shaders "1"
 mat_monitorgamma "1.6"
 mat_monitorgamma_tv_enabled "0"
 mat_powersavingsmode "0"
@@ -320,6 +409,19 @@ mc_max_yawrate "230.0"
 mm_csgo_community_search_players_min "3"
 mm_dedicated_search_maxping "43"
 mm_server_search_lan_ports "27015,27016,27017,27018,27019,27020"
+move_stick_aggression_strength "60.0"
+move_stick_aggressive "1"
+move_stick_circular_deadzone_max "0.9"
+move_stick_circular_deadzone_min "0.17"
+move_stick_response_curve "1.0"
+move_stick_square_deadzone_forward "0.0"
+move_stick_square_deadzone_strafe "0.25"
+move_stick_walk_zone "0.65"
+move_touchpad_circular_deadzone_min "0.1"
+move_touchpad_sensitivity_forward "1.0"
+move_touchpad_sensitivity_strafe "1.0"
+move_touchpad_square_deadzone_forward "0.2"
+move_touchpad_square_deadzone_strafe "0.2"
 muzzleflash_light "1"
 name "༄Magister Kantera"
 net_allow_multicast "1"
@@ -341,15 +443,15 @@ net_steamcnx_allowrelay "1"
 npc_height_adjust "1"
 option_duck_method "0"
 option_speed_method "0"
-password "Shadoweee"
+password "FILL_UP"
 play_distance "1"
 player_botdifflast_s "2"
-player_competitive_maplist_2v2_8_0_E8907D2E "mg_de_inferno"
-player_competitive_maplist_8_8_0_1B1D6577 "mg_de_mirage"
+player_competitive_maplist_2v2_10_0_E8C782EC "mg_de_inferno,mg_de_overpass"
+player_competitive_maplist_8_10_0_C9C8D674 "mg_lobby_mapveto,mg_de_nuke,mg_de_tuscan,mg_de_train"
 player_nevershow_communityservermessage "0"
-player_survival_list_8_0_7 "mg_dz_blacksite,mg_dz_sirocco,mg_dz_junglety"
+player_survival_list_10_0_303 "mg_dz_blacksite,mg_dz_sirocco,mg_dz_vineyard,mg_dz_ember"
 player_teamplayedlast "2"
-player_wargames_list2_8_0_604 "mg_skirmish_flyingscoutsman,mg_skirmish_armsrace,mg_skirmish_demolition"
+player_wargames_list2_10_0_E04 "mg_skirmish_armsrace,mg_skirmish_demolition,mg_skirmish_flyingscoutsman,mg_skirmish_retakes"
 r_drawmodelstatsoverlaymax "1.5"
 r_drawmodelstatsoverlaymin "0.1"
 r_drawtracers_firstperson "1"
@@ -363,15 +465,11 @@ r_player_visibility_mode "1"
 rate "786432"
 safezonex "1.000000"
 safezoney "1.000000"
-sc_enable "1.0"
-sc_joystick_map "1"
-sc_pitch_sensitivity "1.0"
-sc_yaw_sensitivity "1.0"
 scene_showfaceto "0"
 scene_showlook "0"
 scene_showmoveto "0"
 scene_showunlock "0"
-sensitivity "1.97"
+sensitivity "1.4"
 sk_autoaim_mode "1"
 skill "1"
 snd_deathcamera_volume "0.000000"
@@ -405,6 +503,11 @@ spec_replay_autostart "0"
 spec_show_xray "0"
 spec_usenumberkeys_nobinds "1"
 ss_splitmode "0"
+steaminput_firsttimepopup "0"
+steaminput_glyph_display_mode "0"
+steaminput_glyph_neutral "1"
+steaminput_glyph_solid "1"
+steaminput_glyph_style "1"
 store_version "1"
 suitvolume "0.25"
 sv_forcepreload "0"
@@ -417,7 +520,7 @@ sv_logsdir "logs"
 sv_noclipaccelerate "5"
 sv_noclipspeed "5"
 sv_pvsskipanimation "1"
-sv_skyname "sky_cs15_daylight03_hdr"
+sv_skyname "sky_dust"
 sv_specaccelerate "5"
 sv_specnoclip "1"
 sv_specspeed "3"
@@ -433,11 +536,33 @@ texture_budget_panel_y "450"
 tr_best_course_time "0"
 tr_completed_training "0"
 triple_monitor_mode "0"
+trusted_launch "1"
+trusted_launch_once "0"
 tv_nochat "0"
+ui_deepstats_radio_heat_figurine "0"
+ui_deepstats_radio_heat_tab "0"
+ui_deepstats_radio_heat_team "0"
+ui_deepstats_toplevel_mode "0"
 ui_inventorysettings_recently_acknowledged ""
-ui_mainmenu_bkgnd_movie1 "anubis"
+ui_mainmenu_bkgnd_movie_CC4ECB9 "anubis"
 ui_nearbylobbies_filter3 "competitive"
-ui_news_last_read_link "https://blog.counter-strike.net/index.php/2020/06/30428/"
+ui_news_last_read_link "https://www.counter-strike.net/newsentry/3677802763035982969"
+ui_playsettings_custom_preset "mg_de_overpass,mg_de_train"
+ui_playsettings_directchallengekey ""
+ui_playsettings_flags_listen_casual "0"
+ui_playsettings_flags_listen_competitive "0"
+ui_playsettings_flags_listen_cooperative "0"
+ui_playsettings_flags_listen_deathmatch "0"
+ui_playsettings_flags_listen_scrimcomp2v2 "0"
+ui_playsettings_flags_listen_skirmish "0"
+ui_playsettings_flags_listen_survival "0"
+ui_playsettings_flags_official_casual "16"
+ui_playsettings_flags_official_competitive "16"
+ui_playsettings_flags_official_cooperative "0"
+ui_playsettings_flags_official_deathmatch "32"
+ui_playsettings_flags_official_scrimcomp2v2 "0"
+ui_playsettings_flags_official_skirmish "0"
+ui_playsettings_flags_official_survival "0"
 ui_playsettings_maps_listen_casual "random_classic"
 ui_playsettings_maps_listen_competitive "random_classic"
 ui_playsettings_maps_listen_deathmatch "random_classic"
@@ -447,12 +572,15 @@ ui_playsettings_maps_official_casual "mg_casualdelta"
 ui_playsettings_maps_official_deathmatch "mg_casualsigma"
 ui_playsettings_maps_workshop ""
 ui_playsettings_mode_listen "casual"
-ui_playsettings_mode_official_v20 "scrimcomp2v2"
+ui_playsettings_mode_official_v20 "competitive"
+ui_playsettings_prime "1"
 ui_playsettings_survival_solo "0"
 ui_playsettings_warmup_map_name "de_mirage"
 ui_popup_weaponupdate_version "1"
 ui_setting_advertiseforhire_auto "1"
 ui_setting_advertiseforhire_auto_last "/survival"
+ui_show_subscription_alert "1"
+ui_show_unlock_competitive_alert ""
 ui_steam_overlay_notification_position "bottomright"
 ui_vanitysetting_loadoutslot_ct "melee"
 ui_vanitysetting_loadoutslot_t "secondary0"
@@ -476,7 +604,7 @@ voice_positional "0"
 voice_scale "1.0"
 voice_system_enable "1"
 voice_threshold "4000"
-volume "0.3"
+volume "0.600000"
 vprof_graphheight "256"
 vprof_graphwidth "512"
 vprof_unaccounted_limit "0.3"
